Bug 423959: Wrap long lines in column headers of admin/table.html.tmpl - Patch by FrÃ©dÃ©ric Buclin <LpSolit@gmail.com> r=wurblzap a=LpSolit

--- a/skins/standard/global.css
+++ b/skins/standard/global.css
@@ -305,6 +305,10 @@ dl dl > dt {
     border-top: none;
 }
 
+#admin_table th {
+    white-space: normal !important;
+}
+
 /* Style of the attachment table and time tracking table */
 #attachment_table {
     border-collapse: collapse;
